Edit pom - Apply basic structure